swagger annotations for the additional methods
Additional methods: posts_keyword(), posts_quantity(), post_comments()
