# storage/api-docs/api-docs.json
@@ -515,6 +515,246 @@
                     }
                 }
             }
+        },
+        "/api/v1/posts/keyword/{keyword}": {
+            "get": {
+                "tags": [
+                    "Post"
+                ],
+                "summary": "Displays posts containing a specific keyword",
+                "operationId": "2c7eba5a6e115574bad5d1f307187c7e",
+                "parameters": [
+                    {
+                        "name": "keyword",
+                        "in": "path",
+                        "description": "Keyword to search in posts",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "alias"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Text found"
+                                        },
+                                        "quantity of posts with text": {
+                                            "type": "integer",
+                                            "example": 5
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 200
+                                        },
+                                        "Post(s) with found content(s)": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "userId": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "nesciunt quas odio"
+                                                    },
+                                                    "body": {
+                                                        "type": "string",
+                                                        "example": "repudiandae veniam quaerat sunt sed alias aut fugiat sit autem sed est voluptatem omnis possimus esse voluptatibus quis est aut tenetur dolor neque"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No posts found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Provided text was not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/posts/quantity/{quantity}": {
+            "get": {
+                "tags": [
+                    "Post"
+                ],
+                "summary": "Displays specific number of posts",
+                "operationId": "fa1343b5ec3af3486d67456a9cff6f63",
+                "parameters": [
+                    {
+                        "name": "quantity",
+                        "in": "path",
+                        "description": "Quantity of posts",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Showing 3 posts"
+                                        },
+                                        "posts": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "userId": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 5
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "nesciunt quas odio"
+                                                    },
+                                                    "body": {
+                                                        "type": "string",
+                                                        "example": "repudiandae veniam quaerat sunt sed alias aut fugiat sit autem sed est voluptatem omnis possimus esse voluptatibus quis est aut tenetur dolor neque"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No posts found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Something went wrong"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/posts/{post}/comments": {
+            "get": {
+                "tags": [
+                    "Post"
+                ],
+                "summary": "List of comments for specific post",
+                "operationId": "1e3ad07be3678ea91da03cb41990fd3f",
+                "parameters": [
+                    {
+                        "name": "post",
+                        "in": "path",
+                        "description": "Post's id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "postId": {
+                                                "type": "integer",
+                                                "example": 3
+                                            },
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 11
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "fugit labore quia mollitia quas deserunt nostrum sunt"
+                                            },
+                                            "email": {
+                                                "type": "string",
+                                                "example": "Veronica_Goodwin@timmothy.net"
+                                            },
+                                            "body": {
+                                                "type": "string",
+                                                "example": "ut dolorum nostrum id quia aut est\\nfuga est inventore vel eligendi explicabo quis consectetur\\naut occaecati repellat id natus quo est\\nut blanditiis quia ut vel ut maiores ea"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No comments found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "No comments available"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
